# project2_FastAPI

./: .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  rf-simulation-request.py  rf_simulation.drawio
