[project]
name = "rf-simulation-request-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "pymongo>=4.13.0",
    "uvicorn>=0.34.3",
]
